--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 # Node artifact files
 node_modules/
-dist/
+
 
 # Compiled Java class files
 *.class
@@ -25,6 +25,7 @@ dist/
 
 # JetBrains IDE
 .idea/
+.iml
 
 # Unit test reports
 TEST*.xml
