--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="newspaper-delivery-system/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="mysql-connector-java-8.0.18.jar"/>
+	<classpathentry kind="lib" path="C:/Users/adams/Downloads/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar" sourcepath="C:/Users/adams/Downloads/mysql-connector-java-8.0.22/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
