--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="newspaper-delivery-system/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="newspaper-delivery-system/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="C:/Users/adams/Downloads/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar" sourcepath="C:/Users/adams/Downloads/mysql-connector-java-8.0.22/src"/>
+	<classpathentry kind="lib" path="C:/Users/karol/Desktop/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
